<resources>
    <string name="app_name">Meeple!</string>
    <string name="welcome">Benvenuto!</string>
    <string name="username">Username</string>
    <string name="profilo">Profile</string>
    <string name="home">Home</string>
    <string name="cerca">Search</string>
    <string name="impostazioni">Settings</string>
    <string name="title_activity_login">LoginActivity</string>
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="invalid_username">Not a valid username</string>
    <string name="account_gia_esistente">Account already exists</string>
    <string name="aggiungi_amico">Add friend</string>
    <string name="aggiungi_gioco">Add game</string>
    <string name="amici">Friends</string>
    <string name="anni">years</string>
    <string name="autenticazione_fallita">Authentication failed</string>
    <string name="avanti">Next</string>
    <string name="benvenutoInMeeple">Welcome in Meeple!</string>
    <string name="bio">Bio</string>
    <string name="bio_info">Bio: something about you</string>
    <string name="cancella_tutto">Delete all datas</string>
    <string name="carica_foto">Load picture</string>
    <string name="carte">Cards</string>
    <string name="search">Search</string>
    <string name="cerca_amici">Search friends</string>
    <string name="descrizioneCard3">Search and add your friends, discover their game, and find out who knows more about them</string>
    <string name="cerca_un_gioco">Search a game</string>
    <string name="cerca_un_utente">Search a user by email</string>
    <string name="chiudi">Close</string>
    <string name="classifica">Leaderboard</string>
    <string name="complessita">Complexity</string>
    <string name="descrizioneCard2">With the opportunity to save the game in your profile, you will be able to handle them and you will always have them at hand</string>
    <string name="consigliati">Recomended for you</string>
    <string name="crea_acccount">Create an account</string>
    <string name="credenziali_non_valide">Invalid credentials</string>
    <string name="da">from</string>
    <string name="da_giocare">To play</string>
    <string name="descrizione">Description:</string>
    <string name="dettagli_gioco">Game details</string>
    <string name="elimina_account">Delete account</string>
    <string name="email">Email</string>
    <string name="email_non_valida">Invalid email</string>
    <string name="titoloCard3">Join the community!</string>
    <string name="error_retrieving_games">Error in retrieving the game</string>
    <string name="log_out">Sign out from the account</string>
    <string name="esplora">Explore</string>
    <string name="giocati">Played</string>
    <string name="giocato">Played</string>
    <string name="giocatori">players</string>
    <string name="giochi_di_avventura">Adventure game</string>
    <string name="giochi_di_carte">Card game</string>
    <string name="giochi_di_collaborazione">Collaboration game</string>
    <string name="giochi_di_dadi">Dice game</string>
    <string name="giochi_di_societa">Board game</string>
    <string name="giochi_fantasy">Fantasy game</string>
    <string name="giochi_RPG">RPG game</string>
    <string name="giochi_storici">Historical game</string>
    <string name="giochi_veloci">Quick game</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="i_campi_non_possono_essere_vuoti">The fields can\'t be empty</string>
    <string name="username_non_può_essere_vuoto">The username field can\'t be empty</string>
    <string name="immagine_gioco">Game image</string>
    <string name="indietro">Back</string>
    <string name="inserisci_informazioni">Insert your informations</string>
    <string name="login">Login</string>
    <string name="login_failed">Login failed</string>
    <string name="minuti">min</string>
    <string name="modifica_password">Change password</string>
    <string name="nessun_amico">No friends</string>
    <string name="nome">Name:</string>
    <string name="nessun_risultato_trovato">No results matching your research</string>
    <string name="account_inesistente">No account with this email</string>
    <string name="novita_quest_anno">New this year</string>
    <string name="numero_giocatori">Number of players:</string>
    <string name="oppure">Or</string>
    <string name="password">Password</string>
    <string name="password_debole">Weak password: at least 6 characters</string>
    <string name="password_errata">Wrong password</string>
    <string name="invalid_password">Password must be >5 characters</string>
    <string name="per_adulti">For adults</string>
    <string name="per_bambini">For children</string>
    <string name="titoloCard2">Always have your game with you!</string>
    <string name="preferiti">Favourites</string>
    <string name="preferito">Favourite</string>
    <string name="profilo_utente">User profile</string>
    <string name="salta">Skip</string>
    <string name="scegli_categorie">Choose the categories you\'re interested in (at least one)</string>
    <string name="titoloCard1">Discover thousands of game!</string>
    <string name="se_hai_gia_un_account">If you already have an account</string>
    <string name="tempo_gioco">Play time</string>
    <string name="controlla_email">We sent you an email to change your password</string>
    <string name="ti_interessano_giochi">You are interested in game:</string>
    <string name="descrizioneCard1">An entire database avaiable for you, explore the game we suggest for you and always remain updated</string>
    <string name="caricamento">Loading</string>
</resources>